trunk/Archive2/4f/3b5cf491634c3e/output
main.cpp:27:5: error: no matching function for call to 'func2'
    func2(ca); // Error
    ^~~~~
main.cpp:11:6: note: candidate template ignored: substitution failure [with T = auto_ptr, U = int]
void func2(T<U>& value)
     ^
1 error generated.
